<resources>
    <string name="app_name">Instaclone</string>
    <string name="instagram_string">Instagram</string>
    <string name="username_string">Phone number, username or email</string>
    <string name="password_string">Password</string>
    <string name="log_in_string">Log In</string>
    <string name="submit_String">Submit</string>
    <string name="take_picture_String">Take Picture</string>
    <string name="ivPosterImage_desc">Holds the photo that was taken after being captured</string>
    <string name="create_user_string">Create User</string>
    <string name="home_string">Home</string>
    <string name="compose_sreing">Compose</string>
    <string name="profile_string">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gian_name_of_the_user_string">Gian_Name_of_the_user</string>
    <string name="userpostpictures_string">UserPostPictures</string>
    <string name="describe_to_me_the_post">Describe_to_me_the_post</string>
    <string name="timestamp_string">Timestamp</string>
    <string name="content_provider">com.codepath.fileprovider</string>
</resources>