<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:gravity="center"
    tools:context=".LoginActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/instagram_string"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/username_string"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:autofillHints="true"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password_string"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:autofillHints="true" />

    <Button
        android:id="@+id/etButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/log_in_string"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/etButtonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/create_user_string"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>