<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gian_name_of_the_user_string"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="184dp" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="566dp"
        
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/userpostpictures_string"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        tools:text="Description_of_the_post_goes_here" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/tvDescription"
        android:text="@string/timestamp_string" />

</RelativeLayout>